reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__datetime-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStruct"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStruct"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "chrono.NaiveDate": {
        "description": "Date without timezone (%Y-%m-%d)",
        "type": "string",
        "format": "date"
      },
      "chrono.NaiveDateTime": {
        "description": "Date time without timezone (%Y-%m-%dT%H:%M:%S%.f)",
        "type": "string",
        "format": "date-time"
      },
      "reflectapi_demo.tests.serde.TestStruct": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestStruct",
        "required": [
          "date_time_fixed_offset",
          "date_time_local",
          "date_time_utc",
          "duration",
          "naive_date",
          "naive_datetime",
          "naive_time"
        ],
        "properties": {
          "date_time_fixed_offset": {
            "description": "DateTime at a given timezone (RFC3339 format)",
            "type": "string",
            "format": "date-time"
          },
          "date_time_local": {
            "description": "DateTime at a given timezone (RFC3339 format)",
            "type": "string",
            "format": "date-time"
          },
          "date_time_utc": {
            "description": "DateTime at a given timezone (RFC3339 format)",
            "type": "string",
            "format": "date-time"
          },
          "duration": {
            "$ref": "#/components/schemas/std.time.Duration"
          },
          "naive_date": {
            "$ref": "#/components/schemas/chrono.NaiveDate"
          },
          "naive_datetime": {
            "$ref": "#/components/schemas/chrono.NaiveDateTime"
          },
          "naive_time": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "std.time.Duration": {
        "description": "Time duration type",
        "type": "object",
        "title": "std.time.Duration",
        "required": [
          "nanos",
          "secs"
        ],
        "properties": {
          "nanos": {
            "$ref": "#/components/schemas/u32"
          },
          "secs": {
            "$ref": "#/components/schemas/u64"
          }
        }
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      },
      "u64": {
        "description": "64-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
