reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__datetime.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestStruct"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestStruct"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "chrono::DateTime",
        "description": "DateTime at a given timezone (RFC3339 format)",
        "parameters": [
          {
            "name": "Tz"
          }
        ],
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "primitive",
        "name": "chrono::NaiveDate",
        "description": "Date without timezone (%Y-%m-%d)",
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "primitive",
        "name": "chrono::NaiveDateTime",
        "description": "Date time without timezone (%Y-%m-%dT%H:%M:%S%.f)",
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "primitive",
        "name": "chrono::NaiveTime",
        "description": "Time without timezone (%H:%M:%S%.f)",
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStruct",
        "fields": {
          "named": [
            {
              "name": "duration",
              "type": {
                "name": "std::time::Duration"
              },
              "required": true
            },
            {
              "name": "naive_time",
              "type": {
                "name": "chrono::NaiveTime"
              },
              "required": true
            },
            {
              "name": "naive_date",
              "type": {
                "name": "chrono::NaiveDate"
              },
              "required": true
            },
            {
              "name": "naive_datetime",
              "type": {
                "name": "chrono::NaiveDateTime"
              },
              "required": true
            },
            {
              "name": "date_time_fixed_offset",
              "type": {
                "name": "chrono::DateTime",
                "arguments": [
                  {
                    "name": "chrono::FixedOffset"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "date_time_utc",
              "type": {
                "name": "chrono::DateTime",
                "arguments": [
                  {
                    "name": "chrono::Utc"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "date_time_local",
              "type": {
                "name": "chrono::DateTime",
                "arguments": [
                  {
                    "name": "chrono::Local"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "std::time::Duration",
        "description": "Time duration type",
        "fields": {
          "named": [
            {
              "name": "secs",
              "type": {
                "name": "u64"
              },
              "required": true
            },
            {
              "name": "nanos",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u64",
        "description": "64-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "chrono::DateTime",
        "description": "DateTime at a given timezone (RFC3339 format)",
        "parameters": [
          {
            "name": "Tz"
          }
        ],
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "primitive",
        "name": "chrono::NaiveDate",
        "description": "Date without timezone (%Y-%m-%d)",
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "primitive",
        "name": "chrono::NaiveDateTime",
        "description": "Date time without timezone (%Y-%m-%dT%H:%M:%S%.f)",
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "primitive",
        "name": "chrono::NaiveTime",
        "description": "Time without timezone (%H:%M:%S%.f)",
        "fallback": {
          "name": "std::string::String"
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStruct",
        "fields": {
          "named": [
            {
              "name": "duration",
              "type": {
                "name": "std::time::Duration"
              },
              "required": true
            },
            {
              "name": "naive_time",
              "type": {
                "name": "chrono::NaiveTime"
              },
              "required": true
            },
            {
              "name": "naive_date",
              "type": {
                "name": "chrono::NaiveDate"
              },
              "required": true
            },
            {
              "name": "naive_datetime",
              "type": {
                "name": "chrono::NaiveDateTime"
              },
              "required": true
            },
            {
              "name": "date_time_fixed_offset",
              "type": {
                "name": "chrono::DateTime",
                "arguments": [
                  {
                    "name": "chrono::FixedOffset"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "date_time_utc",
              "type": {
                "name": "chrono::DateTime",
                "arguments": [
                  {
                    "name": "chrono::Utc"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "date_time_local",
              "type": {
                "name": "chrono::DateTime",
                "arguments": [
                  {
                    "name": "chrono::Local"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "std::time::Duration",
        "description": "Time duration type",
        "fields": {
          "named": [
            {
              "name": "secs",
              "type": {
                "name": "u64"
              },
              "required": true
            },
            {
              "name": "nanos",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u64",
        "description": "64-bit unsigned integer"
      }
    ]
  }
}
