reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__empty_variants_adjacently_tagged-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEmptyVariantsAdjacentlyTagged"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEmptyVariantsAdjacentlyTagged"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestEmptyVariantsAdjacentlyTagged": {
        "oneOf": [
          {
            "type": "object",
            "title": "Empty",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "type": "object",
                "title": "Empty",
                "properties": {}
              },
              "t": {
                "const": "Empty"
              }
            }
          },
          {
            "type": "object",
            "title": "EmptyUnit",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "type": "object",
                "title": "EmptyUnit",
                "properties": {}
              },
              "t": {
                "const": "EmptyUnit"
              }
            }
          },
          {
            "type": "object",
            "title": "EmptyStruct",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "type": "object",
                "title": "EmptyStruct",
                "properties": {}
              },
              "t": {
                "const": "EmptyStruct"
              }
            }
          }
        ]
      }
    }
  }
}
