reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__empty_variants_externally_tagged-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEmptyVariantsExternallyTagged"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEmptyVariantsExternallyTagged"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestEmptyVariantsExternallyTagged": {
        "oneOf": [
          {
            "const": "Empty"
          },
          {
            "type": "object",
            "title": "EmptyUnit",
            "properties": {
              "EmptyUnit": {
                "description": "empty tuple",
                "type": "array",
                "prefixItems": []
              }
            }
          },
          {
            "type": "object",
            "title": "EmptyStruct",
            "properties": {
              "EmptyStruct": {
                "description": "empty object",
                "type": "object",
                "properties": {}
              }
            }
          }
        ]
      }
    }
  }
}
