reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__empty_variants_internally_tagged-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEmptyVariantsInterallyTagged"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEmptyVariantsInterallyTagged"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestEmptyVariantsInterallyTagged": {
        "oneOf": [
          {
            "type": "object",
            "title": "Empty",
            "required": [
              "type"
            ],
            "properties": {
              "type": {
                "const": "Empty"
              }
            }
          },
          {
            "type": "object",
            "title": "EmptyStruct",
            "required": [
              "type"
            ],
            "properties": {
              "type": {
                "const": "EmptyStruct"
              }
            }
          }
        ]
      }
    }
  }
}
